# morphWriter

./: CHANGELOG.md  README.md  morphWriter.cabal
app/: Main.hs
data/: test_data1.txt  test_data2.txt  test_data3.txt  test_data4.txt  test_data5.txt
