cabal-version:      3.0
name:               morphWriter
version:            0.1.0.0
license:            NONE
author:             Hukasx0
maintainer:         hubertkasp13@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
    
executable morphWriter
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0,
                      directory^>=1.3.7.1,
                      text^>=2.0.1,
                      filepath^>=1.4.2.2,
                      containers^>=0.6.6

    hs-source-dirs:   app

    default-language: Haskell2010
